--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,6 @@ dependencies = [
   "tenacity>=8.2,<9.0",
   "GitPython>=3.1,<3.2",
   "python-dateutil>=2.8,<3.0",
-  "motor>=3.7.1",
 ]
 
 [project.optional-dependencies]
@@ -53,3 +52,6 @@ dev-dependencies = [
   "ruff>=0.5.0,<0.6.0",
   "mypy>=1.7,<1.10"
 ]
+
+[tool.setuptools]
+packages = ["app"]
