--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,7 +22,7 @@ SECRET_KEY=your-super-secret-key-change-in-production
 
 # Celery / RabbitMQ
 CELERY_BROKER_URL=amqp://guest:guest@localhost:5672//
-CELERY_RESULT_BACKEND=
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
 # Repository artifacts
 REPO_MIRROR_ROOT=./repo-mirrors
