--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
       timeout: 5s
       retries: 5
 
+  # RabbitMQ Message Broker
   rabbitmq:
-    image: rabbitmq:management
+    image: rabbitmq:3.12-management
+    container_name: build-risk-rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -22,13 +24,12 @@ services:
       RABBITMQ_DEFAULT_USER: myuser
       RABBITMQ_DEFAULT_PASS: mypass
 
+  # Redis Cache
   redis:
     image: redis:latest
     container_name: build-risk-redis
     ports:
       - "6379:6379"
-    # volumes:
-    #   - redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -36,114 +37,204 @@ services:
       start_period: 20s
       retries: 5
 
-  # Celery worker (optional)
-  # celery-worker:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   container_name: build-risk-celery
-  #   environment:
-  #     MONGODB_URI: mongodb://mongo:27017
-  #     MONGODB_DB_NAME: buildguard
-  #     CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
-  #   depends_on:
-  #     mongo:
-  #       condition: service_healthy
-  #     rabbitmq:
-  #       condition: service_healthy
-  #   command: uv run celery -A app.celery_app.celery_app worker -Q import_repo,collect_workflow_logs,high,low --loglevel=info
+  # SonarQube Server
+  sonarqube:
+    image: sonarqube:latest
+    container_name: build-risk-sonarqube
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://sonar-db:5432/sonar
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonar
+      SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: "true"
+      # Allow more concurrent connections for parallel scanner submissions
+      SONAR_WEB_JAVAADDITIONALOPTS: "-Dsonar.web.http.maxThreads=100"
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_logs:/opt/sonarqube/logs
+    ports:
+      - "9000:9000"
+    depends_on:
+      - sonar-db
+    restart: unless-stopped
 
-  # Celery beat / scheduler (optional)
-  # celery-beat:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   container_name: build-risk-celery-beat
-  #   environment:
-  #     MONGODB_URI: mongodb://mongo:27017
-  #     MONGODB_DB_NAME: buildguard
-  #     CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
-  #   depends_on:
-  #     mongo:
-  #       condition: service_healthy
-  #     rabbitmq:
-  #       condition: service_healthy
-  #   command: uv run celery -A app.celery_app.celery_app beat --loglevel=info
+  # PostgreSQL Database for SonarQube
+  sonar-db:
+    image: postgres:15-alpine
+    container_name: build-risk-sonar-db
+    environment:
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
+      POSTGRES_DB: sonar
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
 
-  # Backend API
-  # backend:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   container_name: build-risk-backend
-  #   environment:
-  #     MONGODB_URI: mongodb://mongo:27017
-  #     MONGODB_DB_NAME: buildguard
-  #     DEBUG: "True"
-  #   ports:
-  #     - "8000:8000"
-  #   volumes:
-  #     - ./backend:/app
-  #   depends_on:
-  #     mongo:
-  #       condition: service_healthy
-  #   command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+  # Celery Worker for Data Processing
+  celery-worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: build-risk-celery-worker
+    command: uv run celery -A app.celery_app worker -Q import_repo,collect_workflow_logs,data_processing,pipeline.default --loglevel=info -c 4
+    user: "${APP_UID:-1000}:${APP_GID:-1000}"
+    restart: unless-stopped
+    environment:
+      MONGODB_URI: mongodb://mongo:27017
+      MONGODB_DB_NAME: buildguard
+      CELERY_BROKER_URL: amqp://myuser:mypass@rabbitmq:5672//
+      REDIS_URL: redis://redis:6379/0
+      HOME: /tmp  # Required for git operations
+      # SonarQube Scanner JVM options
+      SONAR_SCANNER_OPTS: "-Xmx2g -Xms512m"
+      # SonarQube settings
+      SONAR_HOST_URL: http://sonarqube:9000
+      SONAR_TOKEN: ${SONAR_TOKEN:-}
+      SONAR_DEFAULT_PROJECT_KEY: build-risk-ui
+      SONAR_WEBHOOK_SECRET: ${SONAR_WEBHOOK_SECRET:-change-me}
+      REPO_MIRROR_ROOT: /app/data/repo-mirrors
+    volumes:
+      - ./backend:/app
+      - shared_data:/app/data
+    depends_on:
+      mongo:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_started
+      redis:
+        condition: service_healthy
+      sonarqube:
+        condition: service_started
 
-  # Frontend
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   container_name: build-risk-frontend
-  #   environment:
-  #     NEXT_PUBLIC_API_URL: http://localhost:8000/api
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - ./frontend:/app
-  #     - /app/node_modules
-  #     - /app/.next
-  #   depends_on:
-  #     - backend
-  #   command: npm run dev
+  # Celery Beat Scheduler
+  celery-beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: build-risk-celery-beat
+    command: uv run celery -A app.celery_app beat --loglevel=info --schedule=/app/data/celerybeat-schedule
+    user: "${APP_UID:-1000}:${APP_GID:-1000}"
+    restart: unless-stopped
+    environment:
+      MONGODB_URI: mongodb://mongo:27017
+      MONGODB_DB_NAME: buildguard
+      CELERY_BROKER_URL: amqp://myuser:mypass@rabbitmq:5672//
+      REDIS_URL: redis://redis:6379/0
+      HOME: /tmp
+    volumes:
+      - ./backend:/app
+      - shared_data:/app/data
+    depends_on:
+      mongo:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_started
+
+  # Backend API Server
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: build-risk-backend
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    user: "${APP_UID:-1000}:${APP_GID:-1000}"
+    restart: unless-stopped
+    environment:
+      MONGODB_URI: mongodb://mongo:27017
+      MONGODB_DB_NAME: buildguard
+      CELERY_BROKER_URL: amqp://myuser:mypass@rabbitmq:5672//
+      REDIS_URL: redis://redis:6379/0
+      DEBUG: "True"
+      # SonarQube settings
+      SONAR_HOST_URL: http://sonarqube:9000
+      SONAR_TOKEN: ${SONAR_TOKEN:-}
+      SONAR_DEFAULT_PROJECT_KEY: build-risk-ui
+      SONAR_WEBHOOK_SECRET: ${SONAR_WEBHOOK_SECRET:-change-me}
+      SONAR_WEBHOOK_PUBLIC_URL: ${SONAR_WEBHOOK_PUBLIC_URL:-http://localhost:8000/api/sonar/webhook}
+      # GitHub settings
+      GITHUB_APP_ID: ${GITHUB_APP_ID:-}
+      GITHUB_APP_PRIVATE_KEY: ${GITHUB_APP_PRIVATE_KEY:-}
+      GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID:-}
+      GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET:-}
+      GITHUB_WEBHOOK_SECRET: ${GITHUB_WEBHOOK_SECRET:-}
+      SECRET_KEY: ${SECRET_KEY:-your-secret-key-change-in-production}
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend:/app
+      - shared_data:/app/data
+    depends_on:
+      mongo:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_started
+      redis:
+        condition: service_healthy
+
+  # Frontend Application
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: build-risk-frontend
+    command: npm run dev
+    user: "${APP_UID:-1000}:${APP_GID:-1000}"
+    restart: unless-stopped
+    environment:
+      NEXT_PUBLIC_API_URL: http://localhost:8000/api
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
+    depends_on:
+      - backend
 
   # Monitoring Stack
-  loki:
-    image: grafana/loki:2.9.2
-    ports:
-      - "3100:3100"
-    command: -config.file=/etc/loki/local-config.yaml
-    volumes:
-      - ./monitoring/loki-config.yaml:/etc/loki/local-config.yaml
-      - loki_data:/tmp/loki
+  # loki:
+  #   image: grafana/loki:3.0.0
+  #   container_name: build-risk-loki
+  #   ports:
+  #     - "3100:3100"
+  #   command: -config.file=/etc/loki/local-config.yaml
+  #   volumes:
+  #     - loki_data:/loki
 
-  alloy:
-    image: grafana/alloy:latest
-    volumes:
-      - ./monitoring/alloy-config.alloy:/etc/alloy/config.alloy
-      - /var/run/docker.sock:/var/run/docker.sock
-    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
-    ports:
-      - "12345:12345"
-    depends_on:
-      - loki
+  # alloy:
+  #   image: grafana/alloy:latest
+  #   container_name: build-risk-alloy
+  #   volumes:
+  #     - ./monitoring/alloy-config.alloy:/etc/alloy/config.alloy:ro
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #     - alloy_data:/var/lib/alloy/data
+  #   command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+  #   ports:
+  #     - "12345:12345"
+  #   depends_on:
+  #     - loki
 
-  grafana:
-    image: grafana/grafana:latest
-    ports:
-      - "3001:3000"
-    environment:
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-    volumes:
-      - ./monitoring/grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
-      - grafana_data:/var/lib/grafana
-    depends_on:
-      - loki
+  # grafana:
+  #   image: grafana/grafana:10.2.3
+  #   container_name: build-risk-grafana
+  #   restart: unless-stopped
+  #   ports:
+  #     - "3001:3000"
+  #   environment:
+  #     - GF_SECURITY_ADMIN_USER=admin
+  #     - GF_SECURITY_ADMIN_PASSWORD=admin
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
+  #   depends_on:
+  #     - loki
 
 volumes:
   mongo_data:
+  postgres_data:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_logs:
+  shared_data:  # Shared volume for repo mirrors
   loki_data:
   grafana_data:
-
-
+  alloy_data:
