--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,39 +1,86 @@
-# Database configuration
-MONGODB_URI=mongodb://username:password@localhost:27017
-MONGODB_DB_NAME=buildguard
+# ============================================
+# Build Risk Dashboard - Backend Configuration
+# ============================================
 
-# GitHub (OAuth & App)
-GITHUB_CLIENT_ID=your-github-client-id
-GITHUB_CLIENT_SECRET=your-github-client-secret
-GITHUB_REDIRECT_URI=http://localhost:8000/api/auth/github/callback
-FRONTEND_BASE_URL=http://localhost:3000
-GITHUB_WEBHOOK_SECRET=choose-a-shared-secret
-GITHUB_TOKENS=[]
-GITHUB_SCOPES=["read:user","user:email","repo","read:org","workflow"]
-GITHUB_APP_ID=your-github-app-id
-GITHUB_APP_PRIVATE_KEY=/path/to/your/github-app-private-key.pem
-
-# GitLab CI (optional)
-GITLAB_TOKEN=your-gitlab-personal-access-token
-GITLAB_BASE_URL=https://gitlab.com/api/v4
-
-# CircleCI (optional)
-CIRCLECI_TOKEN=your-circleci-personal-api-token
-CIRCLECI_BASE_URL=https://circleci.com/api/v2
-
-# Travis CI (optional)
-TRAVIS_TOKEN=your-travis-api-token
-TRAVIS_BASE_URL=https://api.travis-ci.com
-
+# ----------------------
 # Application
+# ----------------------
 DEBUG=True
 SECRET_KEY=your-super-secret-key-change-in-production
 
-# ML Model (disabled) - remove or set if re-enabling model integration in future
-# MODEl_PATH=./app/ml/models/bayesian_cnn.pth
+# ----------------------
+# Database (MongoDB)
+# ----------------------
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DB_NAME=buildguard
 
-# Celery / RabbitMQ
+# ----------------------
+# Celery / RabbitMQ / Redis
+# ----------------------
 CELERY_BROKER_URL=amqp://myuser:mypass@localhost:5672//
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
-
 REDIS_URL=redis://localhost:6379/0
+
+# ----------------------
+# GitHub OAuth & App
+# ----------------------
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+GITHUB_REDIRECT_URI=http://localhost:8000/api/auth/github/callback
+GITHUB_WEBHOOK_SECRET=your-webhook-secret
+GITHUB_APP_ID=your-github-app-id
+GITHUB_APP_PRIVATE_KEY=/path/to/your/github-app-private-key.pem
+GITHUB_TOKENS=[]
+GITHUB_SCOPES=["read:user","user:email","repo","read:org","workflow"]
+FRONTEND_BASE_URL=http://localhost:3000
+
+# ----------------------
+# SonarQube (Optional)
+# ----------------------
+SONAR_HOST_URL=http://localhost:9000
+SONAR_TOKEN=
+SONAR_DEFAULT_PROJECT_KEY=build-risk-ui
+SONAR_WEBHOOK_SECRET=change-me
+SONAR_WEBHOOK_PUBLIC_URL=http://localhost:8000/api/sonar/webhook
+
+# ----------------------
+# Trivy Security Scanner (Optional)
+# ----------------------
+TRIVY_ENABLED=false
+TRIVY_SEVERITY=CRITICAL,HIGH,MEDIUM
+TRIVY_TIMEOUT=300
+TRIVY_SKIP_DIRS=node_modules,vendor,.git
+
+# ----------------------
+# Pipeline Configurations
+# ----------------------
+DATA_DIR=../repo-data/data
+VALIDATION_BATCH_SIZE=50
+ENRICHMENT_BATCH_SIZE=50
+ENRICHMENT_MAX_RETRIES=3
+MAX_LOG_SIZE_MB=10
+DOWNLOAD_LOGS_BATCH_SIZE=100
+PROCESSING_BATCH_SIZE=50
+WORKTREE_BATCH_SIZE=50
+API_RATE_LIMIT_PER_SECOND=10.0
+COMMIT_REPLAY_MAX_DEPTH=100
+LOG_UNAVAILABLE_THRESHOLD=10
+WORKFLOW_POLL_INTERVAL_MINUTES=15
+
+# ----------------------
+# GitLab CI (Optional)
+# ----------------------
+# GITLAB_TOKEN=your-gitlab-personal-access-token
+# GITLAB_BASE_URL=https://gitlab.com/api/v4
+
+# ----------------------
+# CircleCI (Optional)
+# ----------------------
+# CIRCLECI_TOKEN=your-circleci-personal-api-token
+# CIRCLECI_BASE_URL=https://circleci.com/api/v2
+
+# ----------------------
+# Travis CI (Optional)
+# ----------------------
+# TRAVIS_TOKEN=your-travis-api-token
+# TRAVIS_BASE_URL=https://api.travis-ci.com
