--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,8 @@
 # ----------------------
 # Application
 # ----------------------
+# Environment: dev, staging, prod
+ENV=dev
 DEBUG=True
 SECRET_KEY=your-super-secret-key-change-in-production
 
