--- a/Dockerfile.scanner
+++ b/Dockerfile.scanner
@@ -17,6 +17,9 @@ RUN curl -sSL https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/so
     && ln -s /opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner /usr/local/bin/sonar-scanner \
     && rm /tmp/sonar-scanner.zip
 
+# Install Trivy
+RUN curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+
 # Install uv for faster package management
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
 
