--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
   "python-dateutil>=2.8,<3.0",
   "redis>=5.0,<6.0",
   "pyarrow>=22.0.0",
-  "sf-hamilton>=1.62",
+  "sf-hamilton[pandera]>=1.62",
   "pybars3>=0.9.7",
 ]
 
