--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,7 +8,7 @@ authors = [{ name = "BuildGuard Team" }]
 dependencies = [
   "fastapi>=0.110,<0.113",
   "uvicorn[standard]>=0.24,<0.28",
-  "pydantic>=2.4,<2.7",
+  "pydantic[email]>=2.4,<2.7",
   "pydantic-settings>=2.1,<2.4",
   "pymongo>=4.6,<5.0",
   "httpx>=0.25,<0.28",
@@ -27,6 +27,9 @@ dependencies = [
   "pyarrow>=22.0.0",
   "sf-hamilton[pandera]>=1.62",
   "pybars3>=0.9.7",
+  "google-api-python-client>=2.187.0",
+  "google-auth-httplib2>=0.3.0",
+  "google-auth-oauthlib>=1.2.3",
 ]
 
 [project.optional-dependencies]
@@ -54,7 +57,7 @@ dev-dependencies = [
   "httpx>=0.25,<0.28",
   "black>=23.12,<24.11",
   "ruff>=0.5.0,<0.6.0",
-  "mypy>=1.7,<1.10"
+  "mypy>=1.7,<1.10",
 ]
 
 [tool.setuptools]
