--- a/backend/.env.example
+++ b/backend/.env.example
@@ -45,6 +45,25 @@ GITHUB_ORGANIZATION=your-github-org-name
 # Set to false to disable org membership check (allow any GitHub user)
 REQUIRE_ORG_MEMBERSHIP=true
 
+# For "Sign in with Google" (Guest) AND Gmail API Authorization
+# Default values are already set in config.py, but you can override them here
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/google/callback
+
+# Gmail API Integration (for sending invites)
+# Paste the content of your gmail_token.json here (minified) within single quotes
+# Default value is already set in config.py
+GMAIL_TOKEN_JSON='{"token": "", "refresh_token": "", "token_uri": "https://oauth2.googleapis.com/token", "client_id": "", "client_secret": "", "scopes": ["https://www.googleapis.com/auth/gmail.send"], "universe_domain": "googleapis.com", "account": "", "expiry": ""}'
+
+# Set to true to enable Gmail API (only works if above vars are set)
+GMAIL_NOTIFICATIONS_ENABLED=true
+
+# Optional: Setup for SMTP fallback if API fails
+# GMAIL_USER=your-email@gmail.com
+# GMAIL_APP_PASSWORD=your-16-char-app-password
+# GMAIL_RECIPIENTS=admin@example.com
+
 # ----------------------
 # SonarQube (Optional)
 # ----------------------
