--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
 services:
-  # MongoDB Database
+  # MongoDB Database (Replica Set for Transaction Support)
   mongo:
     image: mongo:6
     container_name: build-risk-mongo
+    command: ["--replSet", "rs0", "--bind_ip_all"]
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
     healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      test: >
+        mongosh --quiet --eval "
+          try { 
+            rs.status().ok 
+          } catch(e) { 
+            rs.initiate({_id: 'rs0', members: [{_id: 0, host: 'localhost:27017'}]}); 
+            1 
+          }"
       interval: 10s
-      timeout: 5s
-      retries: 5
+      timeout: 10s
+      retries: 10
+      start_period: 30s
 
   # RabbitMQ Message Broker
   rabbitmq:
