--- a/.env.prod.example
+++ b/.env.prod.example
@@ -6,7 +6,8 @@
 # =============================================
 # Domain & SSL
 # =============================================
-DOMAIN_NAME=your-domain.com
+# Optional: not used by HTTP-only nginx.conf
+DOMAIN_NAME=your-domain-or-ip
 
 # =============================================
 # Database
@@ -27,10 +28,11 @@ SECRET_KEY=your-secret-key-change-in-production
 NEXTAUTH_SECRET=your-nextauth-secret-change-in-production
 
 # =============================================
-# Application URLs
+# Application URLs (HTTP-only)
 # =============================================
-NEXT_PUBLIC_API_URL=https://your-domain.com/api
-NEXTAUTH_URL=https://your-domain.com
+NEXT_PUBLIC_API_URL=http://your-domain-or-ip/api
+NEXT_PUBLIC_WS_URL=ws://your-domain-or-ip/api/ws/events
+NEXTAUTH_URL=http://your-domain-or-ip
 
 # =============================================
 # GitHub App Configuration
@@ -66,7 +68,7 @@ GMAIL_REFRESH_TOKEN=
 # =============================================
 GRAFANA_USER=admin
 GRAFANA_PASS=change-me-strong-password
-GRAFANA_ROOT_URL=https://your-domain.com/grafana
+GRAFANA_ROOT_URL=http://your-domain-or-ip/grafana
 
 # =============================================
 # Workers
