--- a/.env.prod.example
+++ b/.env.prod.example
@@ -4,10 +4,18 @@
 # =============================================================================
 
 # =============================================
-# Domain & SSL
+# Domain & URLs (REQUIRED)
 # =============================================
-# Optional: not used by HTTP-only nginx.conf
 DOMAIN_NAME=your-domain-or-ip
+NEXT_PUBLIC_API_URL=http://your-domain-or-ip:8000/api
+NEXT_PUBLIC_WS_URL=ws://your-domain-or-ip:8000/api/ws/events
+FRONTEND_BASE_URL=http://your-domain-or-ip:3000
+
+# =============================================
+# Security (REQUIRED - Generate strong secrets!)
+# =============================================
+# Generate with: openssl rand -hex 32
+SECRET_KEY=your-secret-key-change-in-production
 
 # =============================================
 # Database
@@ -21,21 +29,7 @@ RABBITMQ_USER=myuser
 RABBITMQ_PASS=change-me-strong-password
 
 # =============================================
-# Security (REQUIRED - Generate strong secrets!)
-# =============================================
-# Generate with: openssl rand -hex 32
-SECRET_KEY=your-secret-key-change-in-production
-NEXTAUTH_SECRET=your-nextauth-secret-change-in-production
-
-# =============================================
-# Application URLs (HTTP-only)
-# =============================================
-NEXT_PUBLIC_API_URL=http://your-domain-or-ip/api
-NEXT_PUBLIC_WS_URL=ws://your-domain-or-ip/api/ws/events
-NEXTAUTH_URL=http://your-domain-or-ip
-
-# =============================================
-# GitHub App Configuration
+# GitHub App Configuration (REQUIRED)
 # =============================================
 GITHUB_APP_ID=
 GITHUB_APP_PRIVATE_KEY=
@@ -43,19 +37,40 @@ GITHUB_INSTALLATION_ID=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_WEBHOOK_SECRET=
-# For Trivy vulnerability DB
+# OAuth callback URL (must match GitHub App settings)
+GITHUB_REDIRECT_URI=http://your-domain-or-ip/api/auth/github/callback
+
+# GitHub Organization for RBAC (REQUIRED)
+# Only users from this org can access the app
+GITHUB_ORGANIZATION=your-github-org
+
+# For Trivy vulnerability DB and rate limiting
 GITHUB_TOKEN=
+# Comma-separated list of PATs for GitHub API pool
+GITHUB_TOKENS=ghp_token1,ghp_token2
+
+# =============================================
+# CI Provider Tokens (Optional)
+# =============================================
+# CIRCLECI_TOKEN=
+# TRAVIS_TOKEN=
 
 # =============================================
 # SonarQube Configuration
+# NOTE: Configure AFTER first deployment!
+# 1. Access SonarQube at http://your-domain:9000
+# 2. Login with admin/admin, change password
+# 3. Generate token: Administration > Security > Users > Tokens
+# 4. Create webhook: Administration > Configuration > Webhooks
+#    URL: http://backend:8000/api/integrations/webhooks/sonarqube/pipeline
 # =============================================
 SONAR_DB_PASSWORD=sonar-strong-password
 SONAR_TOKEN=
 SONAR_DEFAULT_PROJECT_KEY=build-risk
-SONAR_WEBHOOK_SECRET=
+SONAR_WEBHOOK_SECRET=change-me-to-secure-secret
 
 # =============================================
-# Email (Gmail API)
+# Email (Gmail API) - Optional
 # =============================================
 GMAIL_ENABLED=false
 GMAIL_SENDER_EMAIL=
@@ -68,23 +83,13 @@ GMAIL_REFRESH_TOKEN=
 # =============================================
 GRAFANA_USER=admin
 GRAFANA_PASS=change-me-strong-password
-GRAFANA_ROOT_URL=http://your-domain-or-ip/grafana
+GRAFANA_ROOT_URL=http://your-domain-or-ip:3001
+NEXT_PUBLIC_GRAFANA_URL=http://your-domain-or-ip:3001
 
 # =============================================
 # Workers
 # =============================================
 CELERY_CONCURRENCY=4
-
-# =============================================
-# GitHub Personal Access Tokens (for rate limiting)
-# =============================================
-# Comma-separated list of PATs for GitHub API
-GITHUB_TOKENS=ghp_token1,ghp_token2
-
-# =============================================
-# Frontend Grafana URL
-# =============================================
-NEXT_PUBLIC_GRAFANA_URL=http://your-domain-or-ip:3001
 
 # =============================================
 # Container Permissions (run: id -u && id -g)
