--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,26 +1,4 @@
-# =============================================================================
-# Docker Compose - Production Deployment
-# Full-stack deployment with Nginx reverse proxy (HTTP only)
-# =============================================================================
-
 services:
-  # =========================================
-  # Nginx Reverse Proxy (HTTP)
-  # =========================================
-  nginx:
-    image: nginx:alpine
-    container_name: prod-nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
-      - backend
-    restart: unless-stopped
-    networks:
-      - app-network
-
   # =========================================
   # MongoDB Database (Replica Set)
   # =========================================
@@ -30,6 +8,8 @@ services:
     command: ["--replSet", "rs0", "--bind_ip_all"]
     volumes:
       - mongo_data:/data/db
+    ports:
+      - "27017:27017"
     healthcheck:
       test: >
         mongosh --quiet --eval "
@@ -56,6 +36,9 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-myuser}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS:-mypass}
+    ports:
+      - "15672:15672"
+      - "5672:5672"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     healthcheck:
@@ -73,6 +56,8 @@ services:
   redis:
     image: redis:7-alpine
     container_name: prod-redis
+    ports:
+      - "6379:6379"  # Expose for local development
     volumes:
       - redis_data:/data
     healthcheck:
@@ -111,6 +96,8 @@ services:
   sonarqube:
     image: sonarqube:latest
     container_name: prod-sonarqube
+    ports:
+      - "9000:9000"
     environment:
       SONAR_JDBC_URL: jdbc:postgresql://sonar-db:5432/sonar
       SONAR_JDBC_USERNAME: sonar
@@ -146,6 +133,8 @@ services:
     image: aquasec/trivy:latest
     container_name: prod-trivy
     command: server --listen 0.0.0.0:4954 --cache-dir /root/.cache/trivy
+    ports:
+      - "4954:4954"  # Expose for local development
     environment:
       GITHUB_TOKEN: ${GITHUB_TOKEN:-}
     volumes:
@@ -173,6 +162,8 @@ services:
       dockerfile: Dockerfile
     container_name: prod-backend
     command: uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 4
+    ports:
+      - "8000:8000"
     environment:
       # Database
       MONGODB_URI: mongodb://mongo:27017
@@ -185,6 +176,7 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       DEBUG: "False"
       ENV: "prod"
+      FRONTEND_BASE_URL: ${FRONTEND_BASE_URL:-http://localhost:3000}
       # SonarQube
       SONAR_HOST_URL: http://sonarqube:9000
       SONAR_TOKEN: ${SONAR_TOKEN:-}
@@ -201,6 +193,8 @@ services:
       GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET:-}
       GITHUB_WEBHOOK_SECRET: ${GITHUB_WEBHOOK_SECRET:-}
       GITHUB_TOKENS: ${GITHUB_TOKENS:-}
+      GITHUB_ORGANIZATION: ${GITHUB_ORGANIZATION}
+      GITHUB_REDIRECT_URI: ${GITHUB_REDIRECT_URI:-http://localhost:8000/api/auth/github/callback}
       # Email (Gmail API)
       GMAIL_ENABLED: ${GMAIL_ENABLED:-false}
       GMAIL_SENDER_EMAIL: ${GMAIL_SENDER_EMAIL:-}
@@ -210,6 +204,7 @@ services:
     volumes:
       - repo_data:/app/repo-data
       - shared_data:/app/data
+      - ./builddefection.2025-11-17.private-key.pem:/app/builddefection.2025-11-17.private-key.pem:ro
     depends_on:
       mongo:
         condition: service_healthy
@@ -234,7 +229,6 @@ services:
       --loglevel=info 
       --concurrency=${CELERY_CONCURRENCY:-4}
       -Q pipeline.default,model_ingestion,model_processing,model_prediction,dataset_ingestion,dataset_processing,dataset_validation,sonar_scan,trivy_scan
-    user: "${APP_UID:-1000}:${APP_GID:-1000}"
     environment:
       MONGODB_URI: mongodb://mongo:27017
       MONGODB_DB_NAME: ${MONGODB_DB_NAME:-buildguard}
@@ -257,9 +251,11 @@ services:
       GITHUB_APP_PRIVATE_KEY: ${GITHUB_APP_PRIVATE_KEY:-}
       GITHUB_INSTALLATION_ID: ${GITHUB_INSTALLATION_ID:-}
       GITHUB_TOKENS: ${GITHUB_TOKENS:-}
+      GITHUB_ORGANIZATION: ${GITHUB_ORGANIZATION}
     volumes:
       - repo_data:/app/repo-data
       - shared_data:/app/data
+      - ./builddefection.2025-11-17.private-key.pem:/app/builddefection.2025-11-17.private-key.pem:ro
     depends_on:
       mongo:
         condition: service_healthy
@@ -280,7 +276,6 @@ services:
       dockerfile: Dockerfile
     container_name: prod-celery-beat
     command: uv run celery -A app.celery_app beat --loglevel=info --schedule=/app/data/celerybeat-schedule
-    user: "${APP_UID:-1000}:${APP_GID:-1000}"
     environment:
       MONGODB_URI: mongodb://mongo:27017
       MONGODB_DB_NAME: ${MONGODB_DB_NAME:-buildguard}
@@ -289,6 +284,11 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       HOME: /tmp
       ENV: "prod"
+      # GitHub (required for Settings validation)
+      GITHUB_APP_ID: ${GITHUB_APP_ID:-}
+      GITHUB_APP_PRIVATE_KEY: ${GITHUB_APP_PRIVATE_KEY:-}
+      GITHUB_INSTALLATION_ID: ${GITHUB_INSTALLATION_ID:-}
+      GITHUB_ORGANIZATION: ${GITHUB_ORGANIZATION}
     volumes:
       - shared_data:/app/data
     depends_on:
@@ -312,13 +312,13 @@ services:
         NEXT_PUBLIC_WS_URL: ${NEXT_PUBLIC_WS_URL}
         NEXT_PUBLIC_GRAFANA_URL: ${NEXT_PUBLIC_GRAFANA_URL:-http://localhost:3001}
     container_name: prod-frontend
+    ports:
+      - "3000:3000"
     environment:
       NODE_ENV: production
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
       NEXT_PUBLIC_WS_URL: ${NEXT_PUBLIC_WS_URL}
       NEXT_PUBLIC_GRAFANA_URL: ${NEXT_PUBLIC_GRAFANA_URL:-http://localhost:3001}
-      NEXTAUTH_URL: ${NEXTAUTH_URL}
-      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     restart: unless-stopped
     networks:
       - app-network
