--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -15,8 +15,10 @@ COPY . .
 # Build-time public envs for client bundles
 ARG NEXT_PUBLIC_API_URL
 ARG NEXT_PUBLIC_WS_URL
+ARG NEXT_PUBLIC_GRAFANA_URL
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 ENV NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
+ENV NEXT_PUBLIC_GRAFANA_URL=${NEXT_PUBLIC_GRAFANA_URL}
 
 # Build the application
 RUN npm run build
