--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,9 @@ dependencies = [
   "jaro-winkler>=2.0.3",
   "scikit-learn>=1.8.0",
   "torch>=2.1.2",
+  "joblib>=1.3.0",
+  "PyYAML>=6.0.1",
+  "requests>=2.31.0",
   "prometheus-fastapi-instrumentator>=6.1,<7.0",
 ]
 
